content/_generated-doc/2.13/config/quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config.adoc

:summaryTableId: quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_configuration]]link:#quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.endpoint]]`link:#quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.endpoint[quarkus.opentelemetry.tracer.exporter.otlp.endpoint]`

[.description]
--
The OTLP endpoint to connect to. The endpoint must start with either http:// or https://.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.headers]]`link:#quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.headers[quarkus.opentelemetry.tracer.exporter.otlp.headers]`

[.description]
--
Key-value pairs to be used as headers associated with gRPC requests. The format is similar to the `OTEL_EXPORTER_OTLP_HEADERS` environment variable, a list of key-value pairs separated by the "=" character. See link:https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/protocol/exporter.md#specifying-headers-via-environment-variables[Specifying headers] for more details.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.export-timeout]]`link:#quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.export-timeout[quarkus.opentelemetry.tracer.exporter.otlp.export-timeout]`

[.description]
--
The maximum amount of time to wait for the collector to process exported spans before an exception is thrown. A value of `0` will disable the timeout: the exporter will continue waiting until either exported spans are processed, or the connection fails, or is closed for some other reason.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_EXPORT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_EXPORT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.compression]]`link:#quarkus-opentelemetry-tracer-exporter-otlp-otlp-exporter-config-otlp-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.otlp.compression[quarkus.opentelemetry.tracer.exporter.otlp.compression]`

[.description]
--
Compression method to be used by exporter to compress the payload. 
See link:https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/protocol/exporter.md#opentelemetry-protocol-exporter[Configuration Options] for the supported compression methods.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
